--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "openfret"
-version = "0.1.1"
+version = "0.1.2"
 description = "A standardized format for single-molecule FRET data"
 readme = "README.md"
-authors = [{ name = "Jieming Li", email = "jmli@umich.edu" }, { name = "Leyou Zhang", email = "leyou@umich.edu" }]
+authors = [{ name = "Jieming Li, Leyou Zhang", email = "jmli@umich.edu" }, { name = "Leyou Zhang", email = "leyou@umich.edu" }]
 license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -18,6 +18,8 @@ classifiers = [
     "Intended Audience :: Science/Research",
 ]
 dependencies = [
+    "numpy",
+    "csv"
 ]
 [project.urls]
 "Homepage" = "https://github.com/simol-lab/OpenFRET"
